# graphiti

./: Dockerfile
mcp_server/: Dockerfile  docker-compose.yml  graphiti_mcp_server.py  pyproject.toml
