[project]
name = "mcp-server"
version = "0.4.0"
description = "Graphiti MCP Server"
readme = "README.md"
requires-python = ">=3.10,<4"
dependencies = [
    "mcp>=1.5.0",
    "fastmcp>=0.3.0",
    "openai>=1.68.2",
    "graphiti-core>=0.14.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "python-dotenv>=1.0.0",
    "neo4j>=5.0.0",
    "pydantic>=2.0.0",
]
